--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a id="genero" href="romance.html">Romance</a>
                         <a id="genero" href="suspense.html">Suspense</a>
                         <a id="genero" href="acao.html">Ação</a>
-        
+                        <a id="genero" href="doramas.html">Doramas</a>
                     </ul>
                 </nav>
             </article>
