--- a/romance.html
+++ b/romance.html
@@ -18,7 +18,7 @@
                 <li><a href="romance.html" onclick="exibirFilmes('Romance')">Romance</a></li>
                 <li><a href="suspense.html" onclick="exibirFilmes('Suspense')">Suspense</a></li>
                 <li><a href="acao.html" onclick="exibirFilmes('Ação')">Ação</a></li>
-                <li><a href="dorama.html" onclick="exibirFilmes('Doramas')">Doramas</a></li>
+                <li><a href="doramas.html" onclick="exibirFilmes('Doramas')">Dorama</a></li>
             </ul>
         </nav>
     </header>
