--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h2>Como Funciona</h2>
                 <p>Este site oferece uma maneira simples de organizar sua lista de filmes:</p>
                 <ul>
-                    <li><strong>Gêneros de Filmes:</strong> Os filmes estão organizados em diferentes gêneros, como Romance, Suspense e Ação, para facilitar a busca. Clique nos links abaixo para explorar os filmes por categoria.</li>
+                    <li><strong>Gêneros de Filmes:</strong> Os filmes estão organizados em diferentes gêneros, como Romance, Suspense, Ação, Comédia e Doramas, para facilitar a busca. Clique nos links abaixo para explorar os filmes por categoria.</li>
                 </ul>
             
                 <h2>Escolha seu Gênero Favorito</h2>
@@ -31,6 +31,7 @@
                         <a id="genero" href="suspense.html">Suspense</a>
                         <a id="genero" href="acao.html">Ação</a>
                         <a id="genero" href="doramas.html">Doramas</a>
+                        <a id="genero" href="comedia.html">Comédia</a>
                     </ul>
                 </nav>
             </article>
