--- a/acao.html
+++ b/acao.html
@@ -14,6 +14,7 @@
         <h1>Filmes de Acão</h1>
         <nav>
             <ul>
+                <li><a href="diversos.html">Diversos</a></li>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="romance.html" onclick="exibirFilmes('Romance')">Romance</a></li>
                 <li><a href="suspense.html" onclick="exibirFilmes('Suspense')">Suspense</a></li>
