--- a/comedia.html
+++ b/comedia.html
@@ -14,6 +14,7 @@
         <h1>Filmes de Comédia</h1>
         <nav>
             <ul>
+                <li><a href="diversos.html">Diversos</a></li>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="romance.html" onclick="exibirFilmes('Romance')">Romance</a></li>
                 <li><a href="suspense.html" onclick="exibirFilmes('Suspense')">Suspense</a></li>
@@ -38,7 +39,8 @@
         </div>
          
         <div>
-            <img src="" alt="Esposa de Mentirinha">
+            <img src="https://i.pinimg.com/originals/04/b5/e2/04b5e2504eb1d5694c49baef67ebf9ab.jpg" 
+            alt="Esposa de Mentirinha">
             <h3>Esposa de Mentirinha</h3>
             <button onclick="marcarComoAssistido(this, 'Esposa de Mentirinha')">Marcar como Assistido</button>
         </div>
