--- a/romance.html
+++ b/romance.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Tabela de Filmes</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
-</head>
++</head>
 
 <body>
 
@@ -14,6 +13,7 @@
         <h1>Filmes de Romance</h1>
         <nav>
             <ul>
+                <li><a href="diversos.html">Diversos</a></li>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="romance.html" onclick="exibirFilmes('Romance')">Romance</a></li>
                 <li><a href="suspense.html" onclick="exibirFilmes('Suspense')">Suspense</a></li>
@@ -184,7 +184,8 @@
         
     <div class="movie">
         <div>
-            <img src="" alt="Continência no amor">
+            <img src="https://i.pinimg.com/originals/bd/fc/54/bdfc54248fee03868db523092f85895b.jpg" 
+            alt="Continência no amor">
             <h3>Continência no amor</h3>
             <button onclick="marcarComoAssistido(this, 'Continência no amor')">Marcar como Assistido</button>
         </div>
