--- a/doramas.html
+++ b/doramas.html
@@ -14,13 +14,13 @@
         <h1>Doramas</h1>
         <nav>
             <ul>
-                <li><a href="diversos.html">Diversos</a></li>
                 <li><a href="index.html">Início</a></li>
+                <li><a href="diversos.html" onclick="exibirFilmes('Diversos')">Diversos</a></li>
                 <li><a href="romance.html" onclick="exibirFilmes('Romance')">Romance</a></li>
                 <li><a href="suspense.html" onclick="exibirFilmes('Suspense')">Suspense</a></li>
-                <li><a href="acao.html" onclick="exibirFilmes('Ação')">Ação</a></li>
+               <!-- <li><a href="acao.html" onclick="exibirFilmes('Ação')">Ação</a></li>
                 <li><a href="comedia.html" onclick="exibirFilmes('Comedia')">Comédia</a></li>
-                <li><a href="doramas.html" onclick="exibirFilmes('Doramas')">Dorama</a></li>
+                <li><a href="doramas.html" onclick="exibirFilmes('Doramas')">Dorama</a></li>-->
             </ul>
         </nav>
     </header>
